--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Alarm App</string>
+    <string name="txtView1">No Alarm Set</string>
+    <string name="txtView2">SET ALARM</string>
+    <string name="btn">CANCEL ALARM</string>
 </resources>
